# my_online_school

./: .coverage  .env_template  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: d_0a16f32af9f34665_0001_initial_py.html  d_0a16f32af9f34665_0002_course_description_alter_course_image_and_more_py.html  d_0a16f32af9f34665_0003_lesson_course_py.html  d_0a16f32af9f34665_0004_alter_lesson_course_py.html  d_0a16f32af9f34665_0005_payment_py.html  d_0a16f32af9f34665_0006_alter_lesson_course_py.html  d_0a16f32af9f34665_0007_course_owner_lesson_owner_py.html  d_0a16f32af9f34665_0008_subscription_py.html  d_0a16f32af9f34665___init___py.html  d_1284f993af913c44___init___py.html  d_1df033120bbcc412___init___py.html  d_1df033120bbcc412_csu_py.html  d_1ea838694151cac8___init___py.html  d_1ea838694151cac8_asgi_py.html  d_1ea838694151cac8_settings_py.html  d_1ea838694151cac8_urls_py.html  d_1ea838694151cac8_wsgi_py.html  d_45fa2951ddd43120___init___py.html  d_45fa2951ddd43120_fill_payments_py.html  d_8b562f3fe71efc7d___init___py.html  d_b0f0b7cb819bfdf1___init___py.html  d_b0f0b7cb819bfdf1_admin_py.html  d_b0f0b7cb819bfdf1_apps_py.html  d_b0f0b7cb819bfdf1_models_py.html  d_b0f0b7cb819bfdf1_paginators_py.html  d_b0f0b7cb819bfdf1_permissions_py.html  d_b0f0b7cb819bfdf1_serializers_py.html  d_b0f0b7cb819bfdf1_tests_py.html  d_b0f0b7cb819bfdf1_urls_py.html  d_b0f0b7cb819bfdf1_validators_py.html  (+15 more)
users/: models.py  (+3 more)
(+12 files in other folders)
